--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:luckydrq/js-properties.git"
+    "url": "git@github.com:js-java/js-properties.git"
   },
   "engines": {
     "node": "4.x",
